Fixing bug where Facebook Like div was hidden behind taxon images on overview page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1581,6 +1581,7 @@ ul.content_partner_contacts
       float: left
       position: relative
       width: 430px
+      z-index: 0
       .image
         > a
           display: block
