--- a/app/assets/stylesheets/rtl/application.sass
+++ b/app/assets/stylesheets/rtl/application.sass
@@ -1575,6 +1575,7 @@ ul.content_partner_contacts
       float: right
       position: relative
       width: 430px
+      z-index: 0
       .image
         > a
           display: block
